--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,22 +1,19 @@
 ---
 name: "Test"
 
-on: 
+# yamllint disable-line rule:truthy
+on:
   workflow_dispatch:
-
+  
 jobs:
   build:
     name: Test build
     runs-on: ubuntu-latest
     strategy:
-        matrix:
-          target: ['ai.server', 'double-take', 'double-take-beta']
-        fail-fast: false
+      matrix:
+        target: ['ai.server', 'double-take', 'double-take-beta']
+      fail-fast: false
     steps:
-      - name: Free disk space
-        if: matrix.target == 'ai.server'
-        run: |
-          curl -L -k https://raw.githubusercontent.com/apache/flink/master/tools/azure-pipelines/free_disk_space.sh | bash
       - name: Checkout the repository
         uses: actions/checkout@v3
       - name: Test build
