--- a/codeprojectai/Dockerfile
+++ b/codeprojectai/Dockerfile
@@ -1,4 +1,5 @@
-ARG BUILD_FROM=ghcr.io/hassio-addons/debian-base:7.8.2
+ARG BUILD_FROM=ghcr.io/hassio-addons/ubuntu-base:10.0.5
+# hadolint ignore=DL3006
 FROM $BUILD_FROM AS base
 
 # CodeProject.AI Server 3.0+
