--- a/codeproject-ai-server-dev/config.yaml
+++ b/codeproject-ai-server-dev/config.yaml
@@ -9,20 +9,18 @@ description: standalone open-source AI server
 arch:
   - amd64
   - aarch64
-ingress: true
-ingress_port: 32168
-ingress_stream: true
 startup: services
 init: false
 usb: true
 video: true
+webui: http://[HOST]:[PORT:32168]
 privileged:
   - PERFMON
 ports:
   32168/tcp: 32168
   32168/udp: 32168
 map:
-  - homeassistant_config:rw
+  - addon_config:rw
 environment:
   HA_ADDON: "true"
   DATA_DIR: "/config/ai-server/data"
