--- a/codeproject-ai-server-dev/Dockerfile
+++ b/codeproject-ai-server-dev/Dockerfile
@@ -107,56 +107,7 @@ RUN     add-apt-repository ppa:dotnet/backports -y && \
 
 # hadolint ignore=DL3008,DL3059,DL3013,DL3042,DL3015
 RUN     apt-get install software-properties-common -y && \
-        add-apt-repository ppa:deadsnakes/ppa -y && \
-        apt-get install -y --no-install-recommends            \
-                python3-pip                                       \
-                python3-apt                                       \
-                python3-setuptools && \
-        apt-get install -y --no-install-recommends            \
-                python3.8&& \
-        apt-get install -y --no-install-recommends            \
-                python3.8-distutils                               \
-                python3.8-dev                                     \
-                python3.8-venv && \
-        python3.8 -m pip install --upgrade setuptools && \
-        python3.8 -m pip install --upgrade pip && \
-        python3.8 -m pip install virtualenv virtualenvwrapper > /dev/null
-
-# Python 3.9: Combining all these together into a single layer, but leveraging
-# the work done in Python 3.8:
-# 1. Install Python 3.9 as well as dev and distutils so packages can be built
-#    if needed, and venv for creating virtual environments
-# 4. Using the now installed Python 3.8, upgrade the python setuptools and dev
-#    packages to the latest
-# 5. Install virtualenv virtualenvwrapper for python 3.8
-
-
-# hadolint ignore=DL3008,DL3059,DL3013,DL3042,DL3015
-RUN     apt-get install -y --no-install-recommends            \
-                python3.9 && \
-        apt-get install -y --no-install-recommends            \
-                python3.9-distutils                               \
-                python3.9-dev                                     \
-                python3.9-venv && \
-        python3.9 -m pip install --upgrade setuptools && \
-        python3.9 -m pip install --upgrade pip && \
-        python3.9 -m pip install virtualenv virtualenvwrapper > /dev/null
-
-# Install Python3.11, distutils and dev tools (so packages can be built if needed)
-# and pip install so we can install python packages. We don't need this for the
-# built in modules, but we know we have downloadable modules that could use Python3.11
-# so we preempt the need.
-
-# hadolint ignore=DL3008,DL3059,DL3013,DL3042,DL3015
-RUN     apt-get install -y --no-install-recommends             \
-        python3.11 && \
-        apt-get install -y --no-install-recommends             \
-                python3.11-distutils                               \
-                python3.11-dev                                     \
-                python3.11-venv && \
-        python3.11 -m pip install --upgrade setuptools && \
-        python3.11 -m pip install --upgrade pip && \
-        python3.11 -m pip install virtualenv virtualenvwrapper > /dev/null
+        add-apt-repository ppa:deadsnakes/ppa -y 
 
 # Now we can install the CodeProject.AI SDK
 RUN mkdir -p /install
